[metadata]
name = another-pid
version = 0.0.1
author = Remo Pas
author_email = remo.pas22@gmail.com
description = Another PID controller package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/remopas/another-pid
project_urls = 
	Bug Tracker = https://github.com/remopas/another-pid/issues
classifiers = 
	Programming Language :: Python :: 3
	Licence :: OSI Approved :: MIT Licence
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
